# CMake_Template

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
